# IdlerMapEditor

./: .gitignore  GENERATOR_REFACTORING_STATUS.md  LICENSE.rtf  LOD.txt  MULTIPLE_INSTANCES.txt  MapChunking.md  Monster_Maker_Implementation_Status.md  OTClient_MonsterMaker_Integration_Plan.md  README.md  RME.txt  SCRIPT_LOADING_FUNCTIONALITY_EXPORT.md  VCPKG_CONFIGURATION_EXPORT.md  aNEXTQUESTREFERENCE.XML to export between same .otbm file of different mappers so that we keep quests EXTERNAL..txt  autohousetool.txt  automagic_documentation.txt  automagic_settings_implementation.txt  brushmod.txt  carpet_border_layering.txt  editor_changes.txt  grid.txt  ignore.gitignore  jo ininnn.txt  lua monster creator.lua  palette.txt  propagat.txt  ratata.txt  rme2.txt  snakeevent_fixed.lua  temp.txt  todo.txt  whatsnew.txt
data/: menubar.xml  whatsnew.txt
services/sharemarketplace/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
services/sharemarketplace/deploy/caddy/: Caddyfile  Caddyfile.subdomain  Caddyfile.wildcard
services/sharemarketplace/src/: db.rs  error.rs  main.rs
source/: CMakeLists.txt  action.cpp  action.h  add_creature_dialog.cpp  add_creature_dialog.h  application.cpp  basemap.cpp  border_editor_window.cpp  border_editor_window.h  brush.cpp  brush.h  chat_window.cpp  chat_window.h  client_version.cpp  color_palette_ctrl.cpp  color_palette_ctrl.h  common_windows.cpp  common_windows.h  copybuffer.cpp  copybuffer.h  creatures.cpp  creatures.h  dark_mode_manager.cpp  definitions.h  doodad_brush.cpp  (+109 more)
(+20 files in other folders)
